# demo-publisher

./: Cargo.toml  Dockerfile  README.md
.choreo/: endpoints.yaml
.github/workflows/: docker-image.yml
src/: main.rs
