[package]
name = "demo_publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
lapin = "2.3.1"
lipsum = "0.9.0"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
